--- a/artifacts/Launchpad/eLearning Launchpad.json
+++ b/artifacts/Launchpad/eLearning Launchpad.json
@@ -125,8 +125,8 @@
 	"searchEnableShadeCalc": null,
 	"usedEnableShadeCalc": null,
 	"enableTrace": false,
-	"ver": "22.9.7.1525",
-	"pwa_enable": true,
+	"ver": "22.12.20.1034",
+	"pwa_enable": false,
 	"pwa_customImageIos": null,
 	"pwa_customImageAndroidOld": null,
 	"pwa_customImageAndroidNew": null,
