Updated launchpad theme + UI5 version to Horizon

--- a/artifacts/Launchpad/eLearning Launchpad.json
+++ b/artifacts/Launchpad/eLearning Launchpad.json
@@ -80,9 +80,9 @@
 	"customLogo": null,
 	"launchpadApp": "planet9_launchpad_standard",
 	"hideSidemenu": false,
-	"ui5Version": null,
+	"ui5Version": "1.108",
 	"ui5Url": null,
-	"ui5Theme": "sap_fiori_3",
+	"ui5Theme": "sap_horizon",
 	"header": [
 		"==OBJECT STRING==",
 		"",
@@ -125,7 +125,7 @@
 	"searchEnableShadeCalc": null,
 	"usedEnableShadeCalc": null,
 	"enableTrace": false,
-	"ver": "22.12.20.1034",
+	"ver": "22.12.20.1055",
 	"pwa_enable": false,
 	"pwa_customImageIos": null,
 	"pwa_customImageAndroidOld": null,
