--- a/artifacts/Script/Get Field Worker Tasks/Get Field Worker Tasks.json
+++ b/artifacts/Script/Get Field Worker Tasks/Get Field Worker Tasks.json
@@ -20,7 +20,7 @@
 	"name": "Get Field Worker Tasks",
 	"ver": "21.8.6.1613",
 	"description": null,
-	"content": "file:///content.script",
+	"content": "file:///content.js",
 	"useAsGlobalScript": false,
 	"transpiledContent": null,
 	"lastRunSuccessful": true,
