Removed debugging launchpad and updated package name

--- a/artifacts/Application/wf_details_embedded_app/wf_details_embedded_app.json
+++ b/artifacts/Application/wf_details_embedded_app/wf_details_embedded_app.json
@@ -507,7 +507,7 @@
 			"data": []
 		}
 	],
-	"componentInterface": null,
+	"componentInterface": [],
 	"ver": "22.9.8.1459",
 	"application": "wf_details_embedded_app",
 	"title": "",
