--- a/artifacts/Tile Group/Main Apps.json
+++ b/artifacts/Tile Group/Main Apps.json
@@ -1,15 +1,17 @@
 {
-	"id": "9881522d-c327-4ee7-8627-b31a8e879da7",
-	"createdAt": "2021-04-08T16:16:06.000Z",
+	"id": "3253ae3e-38cf-4b6a-82f7-1ff998820397",
+	"createdAt": "2021-04-08T16:01:35.000Z",
 	"createdBy": "lloyd",
 	"translation": [],
-	"tilesOrder": [],
-	"tilegroupsOrder": [
-		"2827e03b-2676-4fb8-8140-1f2bdc5c892a",
-		"3253ae3e-38cf-4b6a-82f7-1ff998820397"
+	"tilesOrder": [
+		"bdaec96d-680b-49db-a058-e022e4b4fb58",
+		"9e3d4088-63cd-4196-9f1f-6249c7b66f60",
+		"0516c7ed-6910-4343-8d07-3e4115a6e585",
+		"b2d8b76e-6d1b-4c93-a515-6b5cf9f05cfa"
 	],
+	"tilegroupsOrder": [],
 	"configMessage": {},
-	"title": "All Apps",
+	"title": "Field Worker - Inspection Management",
 	"subTitle": null,
 	"description": null,
 	"titleAlignment": null,
@@ -28,7 +30,7 @@
 	"enableShadeCalc": false,
 	"numTiles": null,
 	"enableMessage": false,
-	"ver": "22.9.7.1527",
+	"ver": "23.4.25.1043",
 	"headColor": null,
 	"headTxtClr": null,
 	"subheadTxtClr": null,
@@ -42,7 +44,7 @@
 	"imageMobileHeight": null,
 	"imageTabletHeight": null,
 	"imageHeight": null,
-	"name": "All Apps",
+	"name": "Main Apps",
 	"cardContentWidth": null,
 	"cardContentAlign": null,
 	"cardPerRow": null,
@@ -62,19 +64,31 @@
 	"cockpitTileGroup": false,
 	"package": "1d063863-5ccb-42c8-a7df-323605fe1ee3",
 	"roles": [],
-	"tiles": [],
-	"tilegroups": [
+	"tiles": [
 		{
-			"id": "3253ae3e-38cf-4b6a-82f7-1ff998820397",
-			"name": "Main Apps",
-			"title": "Field Worker - Inspection Management",
+			"id": "bdaec96d-680b-49db-a058-e022e4b4fb58",
+			"name": "1AddEquipment",
+			"title": "Add Equipment",
 			"ver": "23.4.25.1043"
 		},
 		{
-			"id": "2827e03b-2676-4fb8-8140-1f2bdc5c892a",
-			"name": "Manager Apps",
-			"title": "Maintenance Manager",
-			"ver": "23.4.25.1042"
+			"id": "b2d8b76e-6d1b-4c93-a515-6b5cf9f05cfa",
+			"name": "3FieldWorkerInspect - Offline",
+			"title": "Inspection Portal",
+			"ver": "23.4.25.1043"
+		},
+		{
+			"id": "9e3d4088-63cd-4196-9f1f-6249c7b66f60",
+			"name": "2ViewAndEditEquipment_v2",
+			"title": "Equipment MD",
+			"ver": "23.4.25.1043"
+		},
+		{
+			"id": "0516c7ed-6910-4343-8d07-3e4115a6e585",
+			"name": "3FieldWorkerInspect",
+			"title": "Inspection Portal",
+			"ver": "23.4.25.1043"
 		}
-	]
+	],
+	"tilegroups": []
 }
