--- a/artifacts/Tile Group/Manager Apps.json
+++ b/artifacts/Tile Group/Manager Apps.json
@@ -1,15 +1,15 @@
 {
-	"id": "9881522d-c327-4ee7-8627-b31a8e879da7",
-	"createdAt": "2021-04-08T16:16:06.000Z",
+	"id": "2827e03b-2676-4fb8-8140-1f2bdc5c892a",
+	"createdAt": "2021-04-08T16:15:51.000Z",
 	"createdBy": "lloyd",
 	"translation": [],
-	"tilesOrder": [],
-	"tilegroupsOrder": [
-		"2827e03b-2676-4fb8-8140-1f2bdc5c892a",
-		"3253ae3e-38cf-4b6a-82f7-1ff998820397"
+	"tilesOrder": [
+		"7ddc995c-0e80-eb11-85aa-0003ff1e43fb",
+		"20d64b6a-2f72-4ce4-aa7d-00c53b29e20e"
 	],
+	"tilegroupsOrder": [],
 	"configMessage": {},
-	"title": "All Apps",
+	"title": "Maintenance Manager",
 	"subTitle": null,
 	"description": null,
 	"titleAlignment": null,
@@ -28,7 +28,7 @@
 	"enableShadeCalc": false,
 	"numTiles": null,
 	"enableMessage": false,
-	"ver": "22.9.7.1527",
+	"ver": "23.4.25.1042",
 	"headColor": null,
 	"headTxtClr": null,
 	"subheadTxtClr": null,
@@ -42,7 +42,7 @@
 	"imageMobileHeight": null,
 	"imageTabletHeight": null,
 	"imageHeight": null,
-	"name": "All Apps",
+	"name": "Manager Apps",
 	"cardContentWidth": null,
 	"cardContentAlign": null,
 	"cardPerRow": null,
@@ -62,19 +62,19 @@
 	"cockpitTileGroup": false,
 	"package": "1d063863-5ccb-42c8-a7df-323605fe1ee3",
 	"roles": [],
-	"tiles": [],
-	"tilegroups": [
+	"tiles": [
 		{
-			"id": "3253ae3e-38cf-4b6a-82f7-1ff998820397",
-			"name": "Main Apps",
-			"title": "Field Worker - Inspection Management",
-			"ver": "23.4.25.1043"
+			"id": "7ddc995c-0e80-eb11-85aa-0003ff1e43fb",
+			"name": "MY INBOX",
+			"title": "Maintenance Inbox",
+			"ver": "23.4.25.1042"
 		},
 		{
-			"id": "2827e03b-2676-4fb8-8140-1f2bdc5c892a",
-			"name": "Manager Apps",
-			"title": "Maintenance Manager",
-			"ver": "23.4.25.1042"
+			"id": "20d64b6a-2f72-4ce4-aa7d-00c53b29e20e",
+			"name": "Maintenance Status",
+			"title": "Activities",
+			"ver": "23.4.25.1043"
 		}
-	]
+	],
+	"tilegroups": []
 }
