Fixing workflow component

--- a/artifacts/Application/5analyticsapp/5analyticsapp.json
+++ b/artifacts/Application/5analyticsapp/5analyticsapp.json
@@ -261,6 +261,8 @@
 	"compilerTarget": 3,
 	"tabWidth": null,
 	"printWidth": null,
+	"generateVersionOnActivation": false,
+	"activationHistoryCount": 0,
 	"apis": [
 		{
 			"id": "c2c34e8b-3148-4020-8791-8f7b3cec84b6",
