--- a/artifacts/Application/wf_details_embedded_app/wf_details_embedded_app.json
+++ b/artifacts/Application/wf_details_embedded_app/wf_details_embedded_app.json
@@ -547,6 +547,8 @@
 	"compilerTarget": 3,
 	"tabWidth": null,
 	"printWidth": null,
+	"generateVersionOnActivation": false,
+	"activationHistoryCount": 0,
 	"apis": [
 		{
 			"id": "51dcdbec-93ff-4733-b351-dcead0a6e34f",
