--- a/artifacts/Workflow/Inspection Approval.json
+++ b/artifacts/Workflow/Inspection Approval.json
@@ -7,17 +7,19 @@
 			"id": "object-ddf6b9d2-a6e9-4083-818e-b1056b701cb6",
 			"taskType": "UserTask",
 			"inboxApp": "wf_details_embedded_app",
+			"daysUntilOverdue": 1,
 			"title": "User Task",
 			"subTitle": "",
-			"userDeterminationLocal": "50890CF6-F41A-EC11-AE72-DC9840105A9F",
-			"taskAction": "CA5AEFF9-AA6F-4057-B88F-FB5036EF3239",
+			"userDeterminationLocal": "41e8259f-012e-45bc-b498-4d2a746045a1",
+			"taskAction": "90da28be-1e6e-46bb-a1df-2549d26ccb61",
 			"scriptId": "",
 			"runScriptInFork": false,
 			"customApproverScript": "",
 			"enableForward": false,
 			"enableQuery": false,
-			"enableNotification": false,
 			"taskNotification": "",
+			"customerApproverScriptRunSubs": "",
+			"enableNotification": false,
 			"senderEmail": "",
 			"enableSave": false,
 			"enableApprove": true,
@@ -35,17 +37,19 @@
 			"id": "object-77e655ac-cbd6-40e6-8ab8-89961c56dc17",
 			"taskType": "ScriptTask",
 			"inboxApp": "",
+			"daysUntilOverdue": 1,
 			"title": "Script Task",
 			"subTitle": "",
 			"userDeterminationLocal": "",
 			"taskAction": "",
-			"scriptId": "CFF149EF-AD51-4E96-B14C-C62E9A568EE9",
+			"scriptId": "cff149ef-ad51-4e96-b14c-c62e9a568ee9",
 			"runScriptInFork": false,
 			"customApproverScript": "",
 			"enableForward": false,
 			"enableQuery": false,
-			"enableNotification": false,
 			"taskNotification": "",
+			"customerApproverScriptRunSubs": "",
+			"enableNotification": false,
 			"senderEmail": "",
 			"enableSave": false,
 			"enableApprove": false,
@@ -57,17 +61,19 @@
 			"id": "object-2a91eeef-fda3-4299-f549-688ad5bfd421",
 			"taskType": "ScriptTask",
 			"inboxApp": "",
+			"daysUntilOverdue": 1,
 			"title": "Script Task",
 			"subTitle": "",
 			"userDeterminationLocal": "",
 			"taskAction": "",
-			"scriptId": "65B01AAB-2565-4427-B37F-6077DCA7BF86",
+			"scriptId": "65b01aab-2565-4427-b37f-6077dca7bf86",
 			"runScriptInFork": false,
 			"customApproverScript": "",
 			"enableForward": false,
 			"enableQuery": false,
-			"enableNotification": false,
 			"taskNotification": "",
+			"customerApproverScriptRunSubs": "",
+			"enableNotification": false,
 			"senderEmail": "",
 			"enableSave": false,
 			"enableApprove": false,
@@ -268,8 +274,8 @@
 				"posX": 441.5054016113281,
 				"posY": 187.53868103027344,
 				"inboxApp": "wf_details_embedded_app",
-				"userDeterminationLocal": "50890CF6-F41A-EC11-AE72-DC9840105A9F",
-				"taskAction": "CA5AEFF9-AA6F-4057-B88F-FB5036EF3239"
+				"userDeterminationLocal": "41e8259f-012e-45bc-b498-4d2a746045a1",
+				"taskAction": "90da28be-1e6e-46bb-a1df-2549d26ccb61"
 			},
 			{
 				"id": "object-77e655ac-cbd6-40e6-8ab8-89961c56dc17",
@@ -319,7 +325,7 @@
 				],
 				"posX": 345.39794921875,
 				"posY": 418.4051933288574,
-				"scriptId": "CFF149EF-AD51-4E96-B14C-C62E9A568EE9"
+				"scriptId": "cff149ef-ad51-4e96-b14c-c62e9a568ee9"
 			},
 			{
 				"id": "object-2a91eeef-fda3-4299-f549-688ad5bfd421",
@@ -369,7 +375,7 @@
 				],
 				"posX": 546.39794921875,
 				"posY": 420.4051818847656,
-				"scriptId": "65B01AAB-2565-4427-B37F-6077DCA7BF86"
+				"scriptId": "65b01aab-2565-4427-b37f-6077dca7bf86"
 			},
 			{
 				"id": "object-118fefbc-9b5e-4f01-8c82-bbd69f36d9ce",
@@ -499,6 +505,6 @@
 	"omitSaturday": false,
 	"omitSunday": false,
 	"icon": null,
-	"ver": "22.11.21.117",
+	"ver": "24.1.25.1632",
 	"package": "1d063863-5ccb-42c8-a7df-323605fe1ee3"
 }
