--- a/artifacts/Tile Group/Main Apps.json
+++ b/artifacts/Tile Group/Main Apps.json
@@ -33,7 +33,7 @@
 	"enableShadeCalc": false,
 	"numTiles": null,
 	"enableMessage": false,
-	"ver": "23.4.25.1043",
+	"ver": "24.11.12.1517",
 	"headColor": null,
 	"headTxtClr": null,
 	"subheadTxtClr": null,
@@ -73,7 +73,7 @@
 	"groupLayoutLight": null,
 	"groupLayoutDark": null,
 	"tileLayoutLight": null,
-	"tileLayoutDark": null,
+	"tileLayoutDark": "315651aa-d23d-4035-9a94-f02fe0717123",
 	"cardWidth": null,
 	"cardHeight": null,
 	"iconPlacement": null,
@@ -97,7 +97,7 @@
 	"cardFilterOpacity": null,
 	"enableFilterSaturate": false,
 	"cardFilterSaturate": null,
-	"cardBackgroundMaskImage": null,
+	"cardBackgroundMaskImage": "T",
 	"cardBackgroundMaskCustom": null,
 	"headerFilterBlur": null,
 	"enableHeaderBrightness": false,
