--- a/artifacts/Tile Group/Main Apps.json
+++ b/artifacts/Tile Group/Main Apps.json
@@ -80,6 +80,7 @@
 	"imageDarkHeightMedia": null,
 	"imageTabletDarkHeightMedia": null,
 	"imageMobileDarkHeightMedia": null,
+	"forceAttributes": false,
 	"roles": [],
 	"tiles": [
 		{
