Added Light Theme

--- a/artifacts/Launchpad/eLearning Launchpad.json
+++ b/artifacts/Launchpad/eLearning Launchpad.json
@@ -71,12 +71,12 @@
 		"enhancement": "",
 		"languages": [],
 		"showAccessibilityFocusIndicator": true,
-		"pincode": true,
+		"pincode": false,
 		"pincodeTries": 5,
 		"pincodeLength": 4,
 		"pincodeKeyIterations": 40000,
-		"enableWebAuth": true,
-		"autolock": 60
+		"enableWebAuth": false,
+		"autolock": 0
 	},
 	"enhancement": [],
 	"name": "eLearning Launchpad",
@@ -132,8 +132,8 @@
 	"searchEnableShadeCalc": null,
 	"usedEnableShadeCalc": null,
 	"enableTrace": false,
-	"ver": "24.11.14.1547",
-	"pwa_enable": true,
+	"ver": "24.11.15.1715",
+	"pwa_enable": false,
 	"pwa_customImageIos": null,
 	"pwa_customImageAndroidOld": null,
 	"pwa_customImageAndroidNew": null,
