--- a/artifacts/Tile Group/Manager Apps.json
+++ b/artifacts/Tile Group/Manager Apps.json
@@ -28,7 +28,7 @@
 	"enableShadeCalc": false,
 	"numTiles": null,
 	"enableMessage": false,
-	"ver": "24.11.12.1517",
+	"ver": "24.11.15.1715",
 	"headColor": null,
 	"headTxtClr": null,
 	"subheadTxtClr": null,
@@ -64,7 +64,7 @@
 	"openClickTile": false,
 	"groupLayoutLight": null,
 	"groupLayoutDark": "0d8d8268-19b6-4897-a97a-efac9080c227",
-	"tileLayoutLight": null,
+	"tileLayoutLight": "0249cdd6-e33c-4938-b082-8c07f2cc5b06",
 	"tileLayoutDark": "315651aa-d23d-4035-9a94-f02fe0717123",
 	"cardWidth": null,
 	"cardHeight": null,
