--- a/artifacts/Tile Group/Main Apps.json
+++ b/artifacts/Tile Group/Main Apps.json
@@ -30,7 +30,7 @@
 	"enableShadeCalc": false,
 	"numTiles": null,
 	"enableMessage": false,
-	"ver": "24.11.12.1517",
+	"ver": "24.11.15.1714",
 	"headColor": null,
 	"headTxtClr": null,
 	"subheadTxtClr": null,
@@ -66,7 +66,7 @@
 	"openClickTile": false,
 	"groupLayoutLight": null,
 	"groupLayoutDark": null,
-	"tileLayoutLight": null,
+	"tileLayoutLight": "0249cdd6-e33c-4938-b082-8c07f2cc5b06",
 	"tileLayoutDark": "315651aa-d23d-4035-9a94-f02fe0717123",
 	"cardWidth": null,
 	"cardHeight": null,
