Update with new schema changes and update oeVersion

--- a/artifacts/Tile Group/All Apps.json
+++ b/artifacts/Tile Group/All Apps.json
@@ -9,6 +9,10 @@
 		"3253ae3e-38cf-4b6a-82f7-1ff998820397"
 	],
 	"configMessage": {},
+	"lightGroupLayouts": null,
+	"darkGroupLayouts": null,
+	"lightTileLayouts": null,
+	"darkTileLayouts": null,
 	"title": "All Apps",
 	"subTitle": null,
 	"menuText": null,
@@ -78,7 +82,13 @@
 	"imageDarkHeightMedia": null,
 	"imageTabletDarkHeightMedia": null,
 	"imageMobileDarkHeightMedia": null,
-	"forceAttributes": false,
+	"forceTileAttributes": false,
+	"forceGroupAttributes": false,
+	"imageDarkNone": false,
+	"imageTabletDarkNone": false,
+	"imageMobileDarkNone": false,
+	"oneGroupLayout": false,
+	"oneTileLayout": false,
 	"roles": [],
 	"tiles": [],
 	"tilegroups": [
