--- a/artifacts/Tile Group/Main Apps.json
+++ b/artifacts/Tile Group/Main Apps.json
@@ -11,6 +11,10 @@
 	],
 	"tilegroupsOrder": [],
 	"configMessage": {},
+	"lightGroupLayouts": null,
+	"darkGroupLayouts": null,
+	"lightTileLayouts": null,
+	"darkTileLayouts": null,
 	"title": "Field Worker - Inspection Management",
 	"subTitle": null,
 	"menuText": null,
@@ -80,7 +84,13 @@
 	"imageDarkHeightMedia": null,
 	"imageTabletDarkHeightMedia": null,
 	"imageMobileDarkHeightMedia": null,
-	"forceAttributes": false,
+	"forceTileAttributes": false,
+	"forceGroupAttributes": false,
+	"imageDarkNone": false,
+	"imageTabletDarkNone": false,
+	"imageMobileDarkNone": false,
+	"oneGroupLayout": false,
+	"oneTileLayout": false,
 	"roles": [],
 	"tiles": [
 		{
